--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,9 @@
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-
+        <li th:if="${session.user != null}">
+          <a href="/publish">发布</a>
+        </li>
         <li class="dropdown" th:if="${session.user != null}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span th:text="${session.user.getName()}"></span><span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -40,7 +42,7 @@
             <li><a href="#">退出登录</a></li>
           </ul>
         </li>
-        <li th:unless="${session.user !=  null}">
+        <li th:if="${session.user ==  null}">
           <a href="https://github.com/login/oauth/authorize?client_id=ae4d7b7f585c5d24f28f&redirect_url=https://localhost:8887/callback&scope=user&state=1">登录</a>
         </li>
       </ul>
