--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -52,30 +52,37 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid main">
   <div class="row">
     <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
       <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
-      <form action="">
+      <form action="/publish" method="post">
         <div class="form-group">
           <label for="title">问题标题（简明扼要）：</label>
-          <input class="form-control" type="text" id="title" name="title" placeholder="问题标题……">
+          <input class="form-control" type="text" id="title" name="title" th:value="${title}" placeholder="问题标题……">
         </div>
         <div class="form-group">
-          <label for="title">问题补充（必填，请参照右边提示）：</label>
-          <textarea name="description" id="description" cols="30" rows="10" class="form-control"></textarea>
+          <label for="description">问题补充（必填，请参照右边提示）：</label>
+          <textarea name="description" id="description" cols="30" rows="10"  th:text="${description}" class="form-control"></textarea>
         </div>
         <div class="form-group">
-          <label for="title">添加标签：</label>
-          <input class="form-control" type="text" id="tag" name="tag" placeholder="输入标签，以，分隔">
+          <label for="tag">添加标签：</label>
+          <input class="form-control" type="text" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以，分隔">
         </div>
-        <button type="submit" class="btn btn-success btn-publish">发布</button>
+        <div class="container-fluid main">
+          <div class="row">
+            <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${error != null}" th:text="${error}"></div>
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+             <button type="submit" class="btn btn-success btn-publish" style="float: right">发布</button>
+            </div>
+          </div>
+        </div>
       </form>
     </div>
     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
       <h3>问题发起指南</h3>
       ·问题标题：请用精简的语言描述您发布的问题，不超过25字<br/>
-      ·问题补充：详细描述您的问题内容，并确保问题描述清洗只管，并提供一些相关的资料<br/>
+      ·问题补充：详细描述您的问题内容，并确保问题描述清晰直观，并提供一些相关的资料<br/>
       ·问题标签：选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br/>
     </div>
   </div>
